<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="100dp"
        android:layout_height="156dp"
        android:layout_alignTop="@+id/textView3"
        android:layout_toEndOf="@+id/textView3"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/img3"
        android:src="@drawable/dna"/>
    <TextView
        style="@style/textViewStyle"
        android:id="@+id/textView3"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:text="@string/qC"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
    <RadioGroup
        android:id="@+id/qThreeRadioGrp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="@dimen/radioGrpMarginTop"
        android:orientation="vertical">
        <RadioButton
            android:id="@+id/qThreeRadioButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/c1"
            android:textAppearance="?android:textAppearanceMedium"/>
        <RadioButton
            android:id="@+id/qThreeRadioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/c2"
            android:textAppearance="?android:textAppearanceMedium"/>
        <RadioButton
            android:id="@+id/qThreeRadioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/c3"
            android:textAppearance="?android:textAppearanceMedium"/>
    </RadioGroup>
    <TextView
        style="@style/textViewStyle"
        android:id="@+id/textView4"
        android:layout_width="236dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/qThreeRadioGrp"
        android:text="@string/qD"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
    <RadioGroup
        android:id="@+id/qFourRadioGrp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView4"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="@dimen/radioGrpMarginTop"
        android:orientation="vertical">
        <RadioButton
            android:id="@+id/qFourRadioButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/d1"
            android:textAppearance="?android:textAppearanceMedium"/>
        <RadioButton
            android:id="@+id/qFourRadioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/d2"
            android:textAppearance="?android:textAppearanceMedium"/>
        <RadioButton
            android:id="@+id/qFourRadioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/d3"
            android:textAppearance="?android:textAppearanceMedium"/>
        <RadioButton
            android:id="@+id/qFourRadioButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/d4"
            android:textAppearance="?android:textAppearanceMedium"/>
    </RadioGroup>
</RelativeLayout>